--- a/Algebraic Geometry/preamble.tex
+++ b/Algebraic Geometry/preamble.tex
@@ -109,6 +109,7 @@
 \newtheorem{axiom}[theorem]{Axiom}
 \newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{equiv_def}[theorem]{Equivalent Definition}
+\newtheorem{example}[theorem]{Example}
 
 % tcolorbox Setup
 \usepackage[most,many,breakable]{tcolorbox}
@@ -119,24 +120,24 @@
 % EXAMPLE BOX
 %================================
 % After you have defined the style and other theorem environments
-\definecolor{myexamplebg}{RGB}{245, 245, 245} % Very light grey for background
-\definecolor{myexamplefr}{RGB}{120, 120, 120} % Medium grey for frame
-\definecolor{myexampleti}{RGB}{60, 60, 60}    % Darker grey for title
-
-\newtcbtheorem[]{Example}{Example}{
-    colback=myexamplebg,
-    breakable,
-    colframe=myexamplefr,
-    coltitle=myexampleti,
-    boxrule=1pt,
-    sharp corners,
-    detach title,
-    before upper=\tcbtitle\par\vspace{-20pt}, % Reduced the space after the title
-    fonttitle=\bfseries,
-    description font=\mdseries,
-    separator sign none,
-    description delimiters={}{}, % No delimiters around the title
-}{ex}
+% \definecolor{myexamplebg}{RGB}{245, 245, 245} % Very light grey for background
+% \definecolor{myexamplefr}{RGB}{120, 120, 120} % Medium grey for frame
+% \definecolor{myexampleti}{RGB}{60, 60, 60}    % Darker grey for title
+%
+% \newtcbtheorem[]{Example}{Example}{
+%     colback=myexamplebg,
+%     breakable,
+%     colframe=myexamplefr,
+%     coltitle=myexampleti,
+%     boxrule=1pt,
+%     sharp corners,
+%     detach title,
+%     before upper=\tcbtitle\par\vspace{-20pt}, % Reduced the space after the title
+%     fonttitle=\bfseries,
+%     description font=\mdseries,
+%     separator sign none,
+%     description delimiters={}{}, % No delimiters around the title
+% }{ex}
 %================================
 % Solution BOX
 %================================
